--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,14 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+
+  <nav> 
+    <h2>iFeelMovie</h2>
+    <ul>
+      <li>Sign in</li>
+      <li>Sing up</li>
+    </ul>
+ </nav>
+
+  <div>
+    <p>Trouve le film ou la serie qui correspond à ton mood !.</p>
+     <button id="test-button">Fais le test!</button>
+  </div>
+
