--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,15 @@
 
-  <nav> 
+  <nav class="navhomepage"> 
     <h2>iFeelMovie</h2>
     <ul>
-      <li>Sign in</li>
+      <li>Teste ici</li>
       <li>Sing up</li>
+      <li>Home</li>
     </ul>
  </nav>
 
-  <div>
-    <p>Trouve le film ou la serie qui correspond à ton mood !.</p>
-     <button id="test-button">Fais le test!</button>
+  <div class ="divhomepage">
+    <p>Trouve le film ou la serie qui correspond à ton mood !</p>
+    <button id="test-button"> Sign in!</button>
   </div>
 
