--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
+ <link href="https://fonts.googleapis.com/css?family=Kumar+One|Lobster|Oleo+Script|Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
 
