--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,13 +3,14 @@
     <h2>iFeelMovie</h2>
     <ul>
       <li>Teste ici</li>
-      <li>Sing up</li>
+      <li><a href=/signup>sign up</a> </li>
       <li>Home</li>
     </ul>
  </nav>
 
   <div class ="divhomepage">
     <p>Trouve le film ou la serie qui correspond à ton mood !</p>
-    <button id="test-button"> Sign in!</button>
+    {{!-- <button id="test-button"> Sign in!</button> --}}
+    <a href="/movies" class="btn">Sing in!</a>
   </div>
 
