--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -14,4 +14,7 @@
   <div class="error-message">{{ errorMessage }}</div>
 {{/if}}
 
+<script src="bower_components/zxcvbn/dist/zxcvbn.js">
+</script> 
+
 </form>
