--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,14 +3,13 @@
     <h2>iFeelMovie</h2>
     <ul>
       <li>Teste ici</li>
-      <li><a href=/signup>sign up</a> </li>
+      <li><a href="/signup">sign up</a> </li>
       <li>Home</li>
     </ul>
  </nav>
 
-  <div class ="divhomepage">
+  <div class ="homepage">
     <p>Trouve le film ou la serie qui correspond à ton mood !</p>
+    <a href="/" class="btn">Sing in!</a>
     {{!-- <button id="test-button"> Sign in!</button> --}}
-    <a href="/movies" class="btn">Sing in!</a>
   </div>
-
