travail  sam 18 janvier

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,3 +1,13 @@
+
+  <nav class="navhomepage"> 
+    <h2>iFeelMovie</h2>
+    <ul>
+      <li>Teste ici</li>
+      <li><a href="/signup">sign up</a> </li>
+      <li><a href="/ ">Home</a> </li>
+    </ul>
+ </nav>
+
 {{! views/auth/signup.hbs }}
 
 <form id="form" action="/signup" method="POST">
