--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,12 +4,12 @@
     <ul>
       <li>Teste ici</li>
       <li><a href="/signup">sign up</a> </li>
-      <li>Home</li>
+      <li><a href="/ ">Home</a> </li>
     </ul>
  </nav>
 
   <div class ="homepage">
     <p>Trouve le film ou la serie qui correspond à ton mood !</p>
-    <a href="/" class="btn">Sing in!</a>
+    <a href="/login" class="btn">Sing in!</a>
     {{!-- <button id="test-button"> Sign in!</button> --}}
   </div>
