--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -1,3 +1,30 @@
-<div id="container">
-  <h2>You are in a session!</h2>
+ <nav class="navhomepage"> 
+    <h2>iFeelMovie</h2>
+    <ul>
+      <li>Teste ici</li>
+      <li><a href="/signup">sign up</a> </li>
+      <li> <a href="/">Home</a> </li>
+      <a href="/logout">Logout</a>
+
+    </ul>
+ </nav>
+
+<div id="usercontainer">
+  <h2> Hello {{user.username}}! </h2>
+<button> <a href="/test" >Qu’est ce qu’il y a selon mon mood</a> </button>
 </div>
+<div id="userlike">
+ <h3> Les films que tu as kiffé</h3> 
+
+</div>
+<div id="userdislike">
+<h3>Les films que tu n'as pas kiffé</h3>
+
+</div>
+</div>
+<div id="userlist">
+<h3>Ta liste</h3>
+
+</div>
+
+{{!-- /test --}}
