--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,3 +1,13 @@
+
+  <nav class="navhomepage"> 
+    <h2>iFeelMovie</h2>
+    <ul>
+      <li>Teste ici</li>
+      <li><a href="/signup">sign up</a> </li>
+      <li><a href="/ ">Home</a> </li>
+    </ul>
+ </nav>
+
 <form action="/login" method="POST" id="form">
   <h2>Login</h2>
 
