--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,6 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
   background: black; }
 
 .error-message {
@@ -32,28 +31,29 @@ body {
 .navhomepage ul li {
   display: inline;
   padding-right: 0px;
-  color: #870007;
+  color: whitesmoke;
   font-size: small;
   padding-right: 10px;
   font-weight: 400; }
 
 .navhomepage h2 {
-  font-family: 'Oleo Script', cursive;
+  font-family: 'Radley', serif;
   font-size: 35px;
-  color: #870007;
+  color: whitesmoke;
   padding-left: 10px;
   font-weight: lighter;
   border: 10; }
 
 .homepage {
   overflow: hidden;
-  min-height: 100vh;
-  background-image: url("../images/image0.jpeg");
+  min-height: 70vh;
+  background-image: url("../images/Contenuhomep.jpeg");
   background-size: cover;
-  height: 300px; }
+  display: flex;
+  flex-direction: column; }
 
 .homepage p {
-  width: 300px;
+  width: 500px;
   font-size: 27px;
   font-weight: normal;
   text-align: center;
@@ -61,23 +61,29 @@ body {
   margin-right: auto;
   padding-top: 25px;
   color: white;
-  font-family: 'Oleo Script', cursive; }
+  font-family: 'Radley', serif; }
+
+.btnlogin {
+  justify-content: center;
+  display: flex; }
 
 .btn {
-  display: inline-block;
-  padding: 1em;
   background: #870007;
-  border-radius: 5px;
-  border: 3px solid;
-  font-family: 'Oleo Script', cursive;
-  color: white;
-  border-color: white;
-  box-sizing: border-box;
+  border: 1px solid #870007;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 20px;
+  padding: 8px 16px;
   text-decoration: none;
   text-transform: uppercase;
-  transition: .3s ease background;
-  cursor: pointer;
-  display: inline-block; }
+  transition: .3s ease background; }
+
+.btn:hover {
+  background: #fff;
+  color: #870007;
+  transition: .3s ease background; }
 
 #form {
   margin: 30px auto;
@@ -134,12 +140,7 @@ body {
 body {
   background: #222;
   font-family: 'Montserrat',sans-serif;
-  color: #fff;
-  padding: 4% 0;
-  width: 80%;
-  max-width: 84em;
-  margin: 0 auto;
-  overflow-x: hidden; }
+  color: #fff; }
 
 section {
   min-height: 8em;
@@ -324,8 +325,6 @@ div.alert {
     float: none; }
 
 @media (max-width: 1050px) {
-  body {
-    width: 98%; }
   section {
     min-height: 6em;
     margin-bottom: 3em; }
@@ -366,18 +365,5 @@ div.alert {
       margin-right: 1em; }
   a.submit, .note {
     font-size: 0.8em; } }
-
-body::-webkit-scrollbar {
-  background: #222;
-  width: 6px; }
-
-body::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 4px;
-  margin: 16px; }
-
-body::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.3);
-  border-radius: 4px; }
 
 /*# sourceMappingURL=style.css.map */
