--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,8 @@
  </nav>
 
   <div class ="homepage">
-    <p>Trouve le film ou la serie qui correspond à ton mood !</p>
-    <a href="/login" class="btn">Sing in!</a>
-    {{!-- <button id="test-button"> Sign in!</button> --}}
+    <div><p>Trouve le film ou la serie qui correspond à ton mood !</p></div>
+    <div class= "btnlogin"><a href="/login" class="btn">Sign in</a></div>
+     {{!-- <button id="test-button"> Sign in!</button> --}}
   </div>
+  
