--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
  <link href="https://fonts.googleapis.com/css?family=Kumar+One|Lobster|Oleo+Script|Pacifico&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Radley&display=swap" rel="stylesheet">
 </head>
 <body>
 
