--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -12,10 +12,10 @@
 
 <form id="form" action="/signup" method="POST">
   <label for="username">Username</label><br>
-  <input type="text" name="username">
+  <input id="username" type="text" name="username">
 
   <label for="password">Password</label><br>
-  <input type="password" name="password">
+  <input id="password" type="password" name="password">
 
   <button type="submit">Create account</button>
 
