taff css mercredi cyriane

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,8 +9,13 @@
  </nav>
 
   <div class ="homepage">
-    <div><p>Trouve le film ou la serie qui correspond à ton mood !</p></div>
-    <div class= "btnlogin"><a href="/login" class="btn">Sign in</a></div>
+    <div>
+      <p id="accroche1">Une liste de films </p>
+      <p id="accroche2">selon ton mood !</p>
+    </div>
+
+
+    <div id= "btnlogin"><a href="/login" class="btn">Sign in</a></div>
      {{!-- <button id="test-button"> Sign in!</button> --}}
   </div>
   
