--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,20 @@
+@import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 *, :before, :after {
   box-sizing: border-box; }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: black; }
+  background: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px; }
 
 .error-message {
-  background: #870007;
+  background: #d72323;
   box-sizing: border-box;
-  color: #fff;
+  color: #f5eded;
   margin: 20px auto;
   padding: 20px;
   width: 100%; }
@@ -23,7 +28,10 @@ body {
   height: 90px;
   background: black;
   background: linear-gradient(0deg, black 0%, #3b3b3a 100%);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
   border-bottom: darkgray;
   border-bottom-width: 1px;
   border-bottom-style: solid; }
@@ -31,18 +39,21 @@ body {
 .navhomepage ul li {
   display: inline;
   padding-right: 0px;
-  color: whitesmoke;
+  color: #f5eded;
   font-size: small;
   padding-right: 10px;
   font-weight: 400; }
 
 .navhomepage h2 {
-  font-family: 'Radley', serif;
-  font-size: 35px;
-  color: whitesmoke;
-  padding-left: 10px;
-  font-weight: lighter;
-  border: 10; }
+  font-family: 'Oswald', sans-serif;
+  font-size: 70px;
+  letter-spacing: 10px;
+  text-align: center;
+  color: white;
+  font-weight: 400;
+  text-transform: uppercase;
+  z-index: 10;
+  opacity: .9; }
 
 .homepage {
   overflow: hidden;
@@ -60,7 +71,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding-top: 25px;
-  color: white;
+  color: #f5eded;
   font-family: 'Radley', serif; }
 
 .btnlogin {
@@ -68,10 +79,10 @@ body {
   display: flex; }
 
 .btn {
-  background: #870007;
-  border: 1px solid #870007;
+  background: #d72323;
+  border: 1px solid #d72323;
   border-radius: 4px;
-  color: #fff;
+  color: #f5eded;
   cursor: pointer;
   display: inline-block;
   font-size: 20px;
@@ -81,16 +92,34 @@ body {
   transition: .3s ease background; }
 
 .btn:hover {
-  background: #fff;
-  color: #870007;
+  background: #3e3636;
+  color: #f5eded;
   transition: .3s ease background; }
+
+#accroche1 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 20px;
+  line-height: 0;
+  font-weight: 400;
+  letter-spacing: 8px;
+  text-transform: uppercase;
+  color: whitesmoke; }
+
+#accroche2 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 20px;
+  line-height: 0;
+  font-weight: 500;
+  letter-spacing: 8px;
+  text-transform: uppercase;
+  color: whitesmoke; }
 
 #form {
   margin: 30px auto;
   width: 380px; }
 
 #form label {
-  color: #666;
+  color: #3e3636;
   display: inline-block;
   margin-bottom: 10px;
   text-align: center;
@@ -106,10 +135,10 @@ body {
   margin-bottom: 20px; }
 
 #form button {
-  background: #870007;
-  border: 1px solid #870007;
+  background: #d72323;
+  border: 1px solid #d72323;
   border-radius: 4px;
-  color: #fff;
+  color: #f5eded;
   cursor: pointer;
   display: inline-block;
   font-size: 14px;
@@ -119,8 +148,8 @@ body {
   transition: .3s ease background; }
 
 #form button:hover {
-  background: #fff;
-  color: #870007;
+  background: #f5eded;
+  color: #d72323;
   transition: .3s ease background; }
 
 /*MoviesLIST----------------------------------------*/
@@ -130,7 +159,7 @@ body {
   left: 2px;
   top: -2em;
   text-transform: uppercase;
-  color: #555;
+  color: #f5eded;
   font-weight: bold;
   font-size: 1.2em; }
 
@@ -138,9 +167,21 @@ body {
   box-sizing: border-box; }
 
 body {
-  background: #222;
-  font-family: 'Montserrat',sans-serif;
-  color: #fff; }
+  background: #000000;
+  font-family: 'Oswald', sans-serif;
+  letter-spacing: 10px;
+  text-align: center;
+  color: white;
+  font-weight: 400;
+  text-transform: uppercase;
+  z-index: 10;
+  opacity: .9;
+  color: #f5eded;
+  padding: 4% 0;
+  width: 80%;
+  max-width: 84em;
+  margin: 0 auto;
+  overflow-x: hidden; }
 
 section {
   min-height: 8em;
@@ -152,14 +193,14 @@ section {
     flex-grow: 1;
     cursor: pointer;
     transition: all 100ms ease-in;
-    border-bottom: 1em solid #222;
+    border-bottom: 1em solid #000000;
     margin: 2px;
     padding: 0.5em;
-    color: rgba(255, 255, 255, 0.2); }
+    color: #3e3636; }
     section a:hover {
       border-bottom-width: 0em; }
     section a.clicked {
-      color: rgba(255, 255, 255, 0.8);
+      color: #3e3636;
       flex-grow: 1.4; }
   section.mood a:nth-child(1) {
     background-color: #c6597f; }
@@ -180,61 +221,9 @@ section {
     height: 4em;
     position: relative;
     left: -0.2em; }
-  section.energy a:nth-child(1) {
-    background-color: #e8b54e; }
-  section.energy a:nth-child(2) {
-    background-color: #d1b650; }
-  section.energy a:nth-child(3) {
-    background-color: #bab853; }
-  section.energy a:nth-child(4) {
-    background-color: #a3b955; }
-  section.energy a:nth-child(5) {
-    background-color: #8dba57; }
-  section.energy a:nth-child(6) {
-    background-color: #76bb59; }
-  section.energy a:nth-child(7) {
-    background-color: #5fbd5c; }
-  section.energy a:nth-child(8) {
-    background-color: #48be5e; }
-  section.pain a:nth-child(1) {
-    background-color: #571d43; }
-  section.pain a:nth-child(2) {
-    background-color: #602043; }
-  section.pain a:nth-child(3) {
-    background-color: #6a2442; }
-  section.pain a:nth-child(4) {
-    background-color: #742841; }
-  section.pain a:nth-child(5) {
-    background-color: #7e2b41; }
-  section.pain a:nth-child(6) {
-    background-color: #872f40; }
-  section.pain a:nth-child(7) {
-    background-color: #913240; }
-  section.pain a:nth-child(8) {
-    background-color: #9b363f; }
-  section.pain a:nth-child(9) {
-    background-color: #a53a3e; }
-  section.pain a:nth-child(10) {
-    background-color: #ae3d3e; }
-  section.fog a:nth-child(1) {
-    background-color: #d9d4cc; }
-  section.fog a:nth-child(2) {
-    background-color: #d1d2cc; }
-  section.fog a:nth-child(3) {
-    background-color: #cacfcc; }
-  section.fog a:nth-child(4) {
-    background-color: #c2cccc; }
-  section.fog a:nth-child(5) {
-    background-color: #bbcacc; }
-  section.fog a:nth-child(6) {
-    background-color: #b3c7cc; }
-  section.fog a:nth-child(7) {
-    background-color: #acc4cc; }
-  section.fog a:nth-child(8) {
-    background-color: #a4c2cc; }
 
 a.button {
-  color: rgba(255, 255, 255, 0.6);
+  color: #3e3636;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 0.9em;
@@ -243,7 +232,7 @@ a.button {
   float: right;
   transition: all 100ms ease-in; }
   a.button:hover {
-    color: rgba(255, 255, 255, 0.9);
+    color: #3e3636;
     padding: 0.8em 2.5em; }
 
 input {
@@ -261,6 +250,13 @@ input {
     border-left-width: 1em; }
 
 h1 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: black;
+  padding: 0;
+  margin: 0;
   text-align: center;
   margin-top: 0; }
   h1 img {
