--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,14 +1,20 @@
+@import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
+
 *, :before, :after {box-sizing:border-box;}
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: rgb(0,0,0);
+//ancien rouge : 870007
+
+  body {
+  //font-family: Arial, Helvetica, sans-serif;
+  background: #000000;
+  font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:24px;
 }
 
 .error-message {
-  background: #870007;
+  background: #d72323;
   box-sizing: border-box;
-  color: #fff;
+  color: #f5eded;
   margin: 20px auto;
   padding: 20px;
   width: 100%;
@@ -23,7 +29,8 @@ body {
   height:90px;
   background: rgb(0,0,0);
   background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(59,59,58,1) 100%);
-  font-family: Arial, Helvetica, sans-serif;
+  //font-family: Arial, Helvetica, sans-serif;
+  font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:24px;
   border-bottom: darkgray;
   border-bottom-width: 1px;
   border-bottom-style: solid
@@ -32,18 +39,19 @@ body {
 .navhomepage ul li{
 display: inline;
 padding-right:0px;
-color: whitesmoke;
+color: #f5eded;
 font-size: small;
 padding-right: 10px;
 font-weight: 400;
 }
 .navhomepage h2{
-  font-family: 'Radley', serif;;
-  font-size: 35px;
-  color:whitesmoke;
-  padding-left: 10px;
-  font-weight: lighter;
-  border:10;
+  font-family:'Oswald', sans-serif; font-size:70px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10; opacity:.9;
+  //font-family: 'Radley', serif;;
+  //font-size: 35px;
+  //color:whitesmoke;
+  //padding-left: 10px;
+ // font-weight: lighter;
+  //border:10;
 }
 
   .homepage{
@@ -63,7 +71,7 @@ font-weight: 400;
   margin-left: auto;
   margin-right: auto;
   padding-top: 25px;
-  color:white;
+  color:#f5eded;
   font-family: 'Radley', serif;
   }
   .btnlogin{
@@ -73,10 +81,10 @@ font-weight: 400;
 
   .btn {
 
-    background: #870007;
-    border: 1px solid #870007;
+    background: #d72323;
+    border: 1px solid #d72323;
     border-radius: 4px;
-    color: #fff;
+    color: #f5eded;
     cursor: pointer;
     display: inline-block;
     font-size: 20px;
@@ -87,18 +95,24 @@ font-weight: 400;
    
    }
   .btn:hover{
-    background: #fff;
-    color: #870007;
+    background: #3e3636;
+    color: #f5eded;
     transition: .3s ease background;
   }
   
+  #accroche1{
+    font-family:'Oswald', sans-serif; font-size:20px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:whitesmoke;}
+  #accroche2{
+    font-family:'Oswald', sans-serif; font-size:20px; line-height:0; font-weight:500; letter-spacing:8px; text-transform: uppercase; color:whitesmoke;}
+  
+
   #form {
     margin: 30px auto;
     width: 380px;
   }
   
   #form label {
-    color: #666;
+    color: #3e3636;
     display: inline-block;
     margin-bottom: 10px;
     text-align: center;
@@ -116,10 +130,10 @@ font-weight: 400;
   }
   
   #form button {
-    background: #870007;
-    border: 1px solid #870007;
+    background: #d72323;
+    border: 1px solid #d72323;
     border-radius: 4px;
-    color: #fff;
+    color: #f5eded;
     cursor: pointer;
     display: inline-block;
     font-size: 14px;
@@ -131,8 +145,8 @@ font-weight: 400;
   }
   
   #form button:hover {
-    background: #fff;
-    color: #870007;
+    background: #f5eded;
+    color: #d72323;
     transition: .3s ease background;
   }
   /*MoviesLIST----------------------------------------*/      
@@ -155,7 +169,7 @@ font-weight: 400;
       left:2px;
       top:-2em;
       text-transform:uppercase;
-      color:#555;
+      color:#f5eded;
       font-weight:bold;
       font-size:1.2em;
     }
@@ -163,19 +177,19 @@ font-weight: 400;
   
   @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
   
-  $bg:#222;
+  $bg: #000000;
   
   * {box-sizing:border-box;}
   
   body {
     background:$bg;
-    font-family:'Montserrat',sans-serif;
-    color:#fff;
-    // padding:4% 0;
-    // width:80%;
-    // max-width:84em;
-    // margin:0 auto;
-    // overflow-x:hidden;
+    font-family:'Oswald', sans-serif; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10; opacity:.9;
+    color:#f5eded;
+    padding:4% 0;
+    width:80%;
+    max-width:84em;
+    margin:0 auto;
+    overflow-x:hidden;
   }
   
   section {
@@ -193,12 +207,12 @@ font-weight: 400;
       border-bottom:1em solid $bg;
       margin:2px;
       padding:0.5em;
-      color:rgba(255,255,255,0.2);
+      color: #3e3636;
       &:hover {
         border-bottom-width:0em;
       }
       &.clicked {
-        color:rgba(255,255,255,0.8);
+        color:#3e3636;
         flex-grow:1.4;
       }
     }
@@ -216,21 +230,11 @@ font-weight: 400;
         }
       }
     }
-    &.energy {
-      @include options(#FFB44C,#31BF60,8);
-      // E1D24C to 31BF60
-    }
-    &.pain {
-      @include options(#4D1944,#B8413D,10);
-    }
-    &.fog {
-      @include options(#E0D7CC,#9DBFCC,8);
-    }
-    
+  
   }
   
   a.button {
-    color:rgba(255,255,255,0.6);
+    color: #3e3636;
     text-decoration:none;
     text-transform:uppercase;
     font-size:0.9em;
@@ -239,7 +243,7 @@ font-weight: 400;
     float:right;
     transition:all 100ms ease-in;
     &:hover {
-      color:rgba(255,255,255,0.9);
+      color: #3e3636;
       padding:0.8em 2.5em;
     }
   }
@@ -261,6 +265,7 @@ font-weight: 400;
   }
   
   h1 {
+    font-family:'Oswald', sans-serif; font-size:24px; font-weight:400; text-transform: uppercase; color:black; padding:0; margin:0;
     text-align:center;
     margin-top:0;
     img {
@@ -319,6 +324,7 @@ font-weight: 400;
     background:#111;
     padding-bottom:1em;
     transform:translateX(-50%);
+    
     p {
       display:block;
       text-align:center;
