--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,8 +9,8 @@
  </nav>
 
   <div class ="homepage">
-    <div>
-      <p id="accroche1">Une liste de films </p>
+    <div id="textehomep">
+      <p id="accroche1">Une liste de film</p>
       <p id="accroche2">selon ton mood !</p>
     </div>
 
