--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -11,7 +11,7 @@
 
 <div id="usercontainer">
   <h2> Hello {{user.username}}! </h2>
-<button> <a href="/test" >Qu’est ce qu’il y a selon mon mood</a> </button>
+<button> <a href="/test"> Resultat selon mon mood</a> </button>
 </div>
 <div id="userlike">
  <h3> Les films que tu as kiffé</h3> 
