--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,6 @@ body {
   background: #000000;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
-  font-size: 14px;
   line-height: 24px; }
 
 .error-message {
@@ -34,7 +33,8 @@ body {
   line-height: 24px;
   border-bottom: darkgray;
   border-bottom-width: 1px;
-  border-bottom-style: solid; }
+  border-bottom-style: solid;
+  letter-spacing: normal; }
 
 .navhomepage ul li {
   display: inline;
@@ -53,7 +53,8 @@ body {
   font-weight: 400;
   text-transform: uppercase;
   z-index: 10;
-  opacity: .9; }
+  opacity: .9;
+  padding-left: 10px; }
 
 .homepage {
   overflow: hidden;
@@ -65,7 +66,6 @@ body {
 
 .homepage p {
   width: 500px;
-  font-size: 27px;
   font-weight: normal;
   text-align: center;
   margin-left: auto;
@@ -74,9 +74,13 @@ body {
   color: #f5eded;
   font-family: 'Radley', serif; }
 
-.btnlogin {
+#textehomep {
+  padding-top: 50px; }
+
+#btnlogin {
   justify-content: center;
-  display: flex; }
+  display: flex;
+  padding-top: 140px; }
 
 .btn {
   background: #d72323;
@@ -107,16 +111,51 @@ body {
 
 #accroche2 {
   font-family: 'Oswald', sans-serif;
-  font-size: 20px;
+  font-size: 45px;
   line-height: 0;
   font-weight: 500;
   letter-spacing: 8px;
   text-transform: uppercase;
   color: whitesmoke; }
 
+/*Secret---------------*/
+#usercontainer button {
+  background: #d72323;
+  border: 1px solid #d72323;
+  border-radius: 4px;
+  color: #f5eded;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 20px;
+  padding: 8px 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: .3s ease background; }
+  #usercontainer button button:hover {
+    background: #3e3636;
+    color: #f5eded;
+    transition: .3s ease background; }
+  #usercontainer button a:link {
+    text-transform: none;
+    color: #f5eded;
+    font-size: 20px;
+    text-decoration: none;
+    text-transform: uppercase; }
+
+/*SignUP---------------*/
 #form {
   margin: 30px auto;
   width: 380px; }
+  #form h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 20px;
+    letter-spacing: normal;
+    text-align: center;
+    color: white;
+    font-weight: 50;
+    text-transform: uppercase;
+    z-index: 10;
+    opacity: .9; }
 
 #form label {
   color: #3e3636;
@@ -152,8 +191,17 @@ body {
   color: #d72323;
   transition: .3s ease background; }
 
+/*Reseau S------------*/
 /*MoviesLIST----------------------------------------*/
-.title-before:before, section:before, article:before {
+#moviespage ul {
+  list-style-type: none; }
+
+.details {
+  letter-spacing: 0;
+  text-transform: none; }
+
+/*test-------------------------*/
+.title-before:before, section:before {
   content: attr(class);
   position: absolute;
   left: 2px;
@@ -241,7 +289,6 @@ input {
   font-family: 'Montserrat',sans-serif;
   font-size: 0.9em;
   border: none;
-  margin-right: 2em;
   border-left: #444 solid 0.5em;
   transition: all 100ms ease-in;
   color: #222; }
@@ -265,43 +312,19 @@ h1 {
 .submit, input {
   margin-top: -2em; }
 
-.info, article {
+.info {
   margin-top: -1em;
   float: left;
   margin-bottom: 7em; }
-  .info span, article span {
+  .info span {
     text-transform: uppercase;
     color: #555;
     font-weight: bold; }
-    .info span.color, article span.color {
+    .info span.color {
       width: 2em;
       height: 0.8em;
       display: inline-block;
       margin-right: 2em; }
-
-article {
-  clear: both;
-  float: none;
-  position: relative;
-  padding: 4px; }
-  article span {
-    display: block;
-    color: #aaa; }
-    article span img {
-      height: 1.1em;
-      margin: 0 0.3em 0 0.5em;
-      vertical-align: -2px; }
-    article span.entry {
-      margin-bottom: 1em; }
-    article span.date {
-      margin-bottom: 4px;
-      color: #555;
-      display: inline;
-      float: right; }
-    article span.notes {
-      color: #555;
-      display: inline;
-      text-transform: none; }
 
 div.alert {
   display: none;
@@ -309,6 +332,7 @@ div.alert {
   top: 25%;
   left: 50%;
   width: 30%;
+  height: 25%;
   background: #111;
   padding-bottom: 1em;
   transform: translateX(-50%); }
@@ -329,7 +353,7 @@ div.alert {
       max-width: 3em; }
   div.alert {
     width: 80%; }
-  .info, article {
+  .info {
     display: block;
     clear: both;
     margin-top: -1.5em;
@@ -354,11 +378,26 @@ div.alert {
     margin-top: 4px; } }
 
 @media (max-width: 600px) {
-  .info, article {
+  .info {
     font-size: 0.8em; }
-    .info span.color, article span.color {
-      width: 0.8em;
-      margin-right: 1em; }
+    .info span.color {
+      width: 0.8em; }
+      .info span.color section {
+        min-height: 4em; }
+      .info span.color article span.notes {
+        display: block;
+        margin-top: 4px; } }
+  @media (max-width: 600px) and (max-width: 600px) {
+    .info section {
+      min-height: 4em; }
+    .info article span.notes {
+      display: block;
+      margin-top: 4px; } }
+  @media (max-width: 600px) and (max-width: 600px) {
+    .info {
+      margin-right: 1em; } }
+
+@media (max-width: 600px) {
   a.submit, .note {
     font-size: 0.8em; } }
 
