--- a/views/Test.hbs
+++ b/views/Test.hbs
@@ -9,11 +9,10 @@
     </ul>
  </nav>
 
-
-<section class="mood" role="listbox">
-  <a href="/movies?mood=heartbroken" method="GET" class="#" role="option">1<img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/237/broken-heart_1f494.png"></a>
-  <a href="/movies?mood=sad" method="GET" class="#" role="option">2<img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/237/crying-cat-face_1f63f.png"></a>
-  <a href="/movies?mood=happy" method="GET" class="#" role="option">3<img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/237/smiling-face-with-open-mouth_1f603.png"></a>
+<section class="Quel est ton mood du moment ?" role="listbox">
+  <a href="/movies?mood=heartbroken" method="GET" class="#" role="option"><img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/237/broken-heart_1f494.png"></a>
+  <a href="/movies?mood=sad" method="GET" class="#" role="option"><img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/237/crying-cat-face_1f63f.png"></a>
+  <a href="/movies?mood=happy" method="GET" class="#" role="option"><img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/237/smiling-face-with-open-mouth_1f603.png"></a>
 </section>
 
 
