--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -11,14 +11,24 @@
 {{! views/auth/signup.hbs }}
 
 <form id="form" action="/signup" method="POST">
+ 
+<div id="formulairesignup">
+
+  <div id="remplir">
   <label for="username">Username</label><br>
   <input id="username" type="text" name="username">
 
   <label for="password">Password</label><br>
   <input id="password" type="password" name="password">
+  </div>
 
+  <div id="btnsingup">
   <button type="submit">Create account</button>
+  </div>
 
+ <p class="account-message">
+    You have an account? <a href="/login">Sign in</a>
+  </p>
 
 {{#if errorMessage}}
   <div class="error-message">{{ errorMessage }}</div>
